# serverless-fast-api

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  tasks.py  template.yml
example_app/: aws_authorizer.py  aws_s3_event.py  aws_secrets.py  logger.py  main.py  settings.py  version.py
example_app/api/api_v1/: api.py
example_app/api/api_v1/endpoints/: example.py
example_app/core/models/: input.py  output.py
example_app/settings/: app_dev.yaml
infrastructure/cloudformation/: .env_example  .gitignore  2-create-dbpasswordsecret.sh  3-deploy-vpc.sh  4-cleanup.sh  README.md  get_iam.sh  rds_functions.sh  stacks.py  template-vpc-rds.yml
infrastructure/cloudformation/rds_setup/: .env_example  .pgpass  README.md  pg_dump_schema.sh  setup.sh  setup_database.sql
infrastructure/terraform/: aws_lambda.tf  variables.tf
lambda/: Dockerfile  Makefile  README.md  layer_builds.sh  layer_create_zip.sh  layer_publish.sh  layer_size.sh
postman/: .gitignore  LICENSE  Makefile  README.md  config  env.json  package.json  template.yml
postman/__tests__/unit/handlers/: newman-run-app-dev.test.js
postman/scripts/: newman_runs.sh
postman/src/: cognito_auth.js  newman_env.js  newman_run.js
postman/src/collections/: app-dev.postman_collection.json
postman/src/config/: default.json
scripts/: example.ipynb  example.py  mangum_http_event.py  package_lambda.sh  runtime_mock.py
terraform/: aws_api_gateway.tf  variables.tf
tests/: conftest.py  test_aws_authorizer.py  test_aws_s3_event.py  test_aws_secrets.py  test_example_endpoint.py  test_ping.py  test_settings.py
tests/fixtures/: s3_event.json
