[tool.poetry]
name = "serverless-fast-api"
version = "0.1.0"
description = ""
authors = ["Darren Weber <dweber.consulting@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7.0"
fastapi = "^0.54.1"
mangum = "^0.8.0"


[tool.poetry.dev-dependencies]
awscli = "~1.18"
aws-sam-cli = "~0.48"
black = "^19.10b0"
pre-commit = "^2.3.0"
pytest = "~5.4"
requests = "~2.23"
uvicorn = "^0.11.5"
pytest-cov = "^2.8.1"
pylint = "^2.5.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
