[tool.poetry]
name = "serverless-fast-api"
version = "0.2.0"
description = ""
authors = ["Darren Weber <dweber.consulting@gmail.com>"]
license = "MIT"

include = ["example_app/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "example_app"}
]


[tool.poetry.dependencies]
python = "~3.7.0"
fastapi = "^0.54.1"
mangum = "^0.8.0"


[tool.poetry.dev-dependencies]
awscli = "~1.18"
aws-sam-cli = "~0.48"
black = "^19.10b0"
invoke-release = "~4.0"
mypy = "^0.770"
pre-commit = "^2.3.0"
pylint = "~2.0"
pytest = "~5.4"
pytest-cov = "^2.8.1"
requests = "~2.23"
uvicorn = "^0.11.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
